test: overflow issue

--- a/styles/site-styles/component-display.css
+++ b/styles/site-styles/component-display.css
@@ -1,6 +1,6 @@
 .component-intro {
-  /* padding: 1rem; */
-  /* text-align: center; */
+  padding: 1rem;
+  text-align: center;
   margin: 2rem 0;
 }
 h2 {
@@ -16,7 +16,7 @@ h2 {
 }
 
 .component-code-display {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   margin-top: 2rem;
 }
