--- a/styles/site-styles/docs.css
+++ b/styles/site-styles/docs.css
@@ -25,7 +25,3 @@ ul a:hover {
 .sidebar h2 {
   color: var(--grey);
 }
-
-i {
-  /* color: var(--white); */
-}
